--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "mongoose": "^5.3.8",
@@ -19,13 +20,9 @@
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "react-simplemde-editor": "^4.0.0",
-    "react-simplemde-v1": "^2.0.1",
     "showdown": "^1.9.0",
-    "simplemde": "^1.11.2",
     "socket.io": "^2.1.1",
-    "styled-components": "^4.1.3",
-    "sweetalert2": "^8.2.6"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "concurrently --kill-others \"yarn server\" \"yarn client\"",
