--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.1",
     "react": "^16.8.4",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
