--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.4",
+    "highlight.js": "^9.15.6",
     "jsonwebtoken": "^8.5.0",
+    "markdown-it": "^8.4.2",
     "mongoose": "^5.3.8",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.1",
     "react": "^16.8.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
+    "react-highlight.js": "^1.0.7",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
     "react-mde": "^7.0.3",
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-syntax-highlighter": "^10.2.1",
     "showdown": "^1.9.0",
     "socket.io": "^2.1.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "windows": "^0.0.8"
   },
   "scripts": {
     "start": "concurrently --kill-others \"yarn server\" \"yarn client\"",
