--- a/package.json
+++ b/package.json
@@ -18,18 +18,15 @@
     "react": "^16.8.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
-    "react-highlight.js": "^1.0.7",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
     "react-mde": "^7.0.3",
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "react-syntax-highlighter": "^10.2.1",
-    "showdown": "^1.9.0",
+    "react-toastify": "^5.0.0-rc.3",
     "socket.io": "^2.1.1",
-    "styled-components": "^4.1.3",
-    "windows": "^0.0.8"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "concurrently --kill-others \"yarn server\" \"yarn client\"",
