--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.0.0-rc.3",
+    "showdown": "^1.9.0",
     "socket.io": "^2.1.1",
     "styled-components": "^4.1.3"
   },
