Fazendo alterações na hora de carregar a página e add um loading com animação

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-it": "^8.4.2",
     "mongoose": "^5.3.8",
     "node-sass": "^4.11.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.8.4",
     "react-color": "^2.17.0",
@@ -22,6 +23,7 @@
     "react-markdown": "^4.0.6",
     "react-mde": "^7.0.3",
     "react-modal": "^3.8.1",
+    "react-placeholder": "^3.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.0.0-rc.3",
